--- a/grid2.html
+++ b/grid2.html
@@ -9,25 +9,48 @@
         .card{
             
             display:grid;
-           grid-template-rows: 1fr 2fr 1fr 1fr 2fr;
-           grid-template-columns: 3fr 1fr 1fr 1fr 1fr;
+           grid-template-rows: repeat(2 1fr);
+           grid-template-columns: repeat(4 60px);
            gap:10px 20px;
         }
         .card>div{
             background-color: grey;
             color:white;
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            background-color: rgb(88, 83, 83);
+            border-radius: 5px;
         }
-        .cont>div:nth-child(1){
+        .div1{
             grid-column-start: 1 ;
-            grid-column-end: 2;
+            grid-column-end: 3;
             grid-row-start:1 ;
             grid-row-end: 2;
         }
-        .cont>div:nth-child(2){
+        .div2{
+            grid-column-start: 3 ;
+            grid-column-end: 4;
+            grid-row-start:1 ;
+            grid-row-end: 3;
+        }
+        .div3{
+            grid-column-start: 1 ;
+            grid-column-end: 2;
+            grid-row-start:2 ;
+            grid-row-end: 3;
+        }
+        .div4{
             grid-column-start: 2 ;
             grid-column-end: 3;
+            grid-row-start:2 ;
+            grid-row-end: 3;
+        }
+        .div5{
+            grid-column-start: 4 ;
+            grid-column-end: 5;
             grid-row-start:1;
-            grid-row-end: 2;
+            grid-row-end: 3;
         }
 
         
